5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1828_1644.log
== TEST (2019-06-12 14:08:36) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

while (size[v]>1):
	a=0
	if(v[i]<5):
		r=r+1
		a=a+1
g=zeros(r,dtype=int)
g[i]=v
print(r)
print
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:13:11) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in size(v):
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:13:44) 
-- CODE:
from numpy import*

v=array(eval(float(input())))
r=0

for i in size(v):
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:14:12) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in size(v):
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:14:56) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in size[v]:
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:15:25) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in (size(v)):
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:16:30) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in size(v):
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:16:50) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in range(v):
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:12) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:45) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if (v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:18:06) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:03) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:38) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in size(v):
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:05) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in range(v):
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:16) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in arange(v):
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:40) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in range(v):
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:26:23) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:26:52) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- EXECUTION TIME:
0.878977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1644/main.py", line 7, in <module>
    if(v[i]<5):
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:27:47) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in size(v):
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:28:51) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in size(v):
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:10) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:42) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=5
for i in v:
	if(v[i]<i):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:30) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if(v[i]<5):
		r=r+1
a=0
b=0
g=zeros(r,dtype=int)
for i in g:
	if (v[i]<5):
		a=a+1
print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:07) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

while (size(v)>1):
	if (v[i]<5):
		r=r+1
g=zeros(r,dtypes=int):
	g[0]=v[0]
	g[1]=v[1]

print(r)
print(g)
-- ERROR:
File "XXXX", line 9
    g=zeros(r,dtypes=int):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:13) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

while (size(v)>1):
	if (v[i]<5):
		r=r+1
g=zeros(r,dtypes=int)
	g[0]=v[0]
	g[1]=v[1]

print(r)
print(g)
-- ERROR:
File "XXXX", line 10
    g[0]=v[0]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:17) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

while (size(v)>1):
	if (v[i]<5):
		r=r+1
g=zeros(r,dtypes=int)
g[0]=v[0]
g[1]=v[1]

print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:29) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
g=zeros(r,dtypes=int)
g[0]=v[0]
g[1]=v[1]

print(r)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:52) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
g[0]=v[0]
g[1]=v[1]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:01) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
	print(r)
g=zeros(r,dtypes=int)
g[0]=v[0]
g[1]=v[1]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:35) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
g[0]=v[0]
g[1]=v[1]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:43) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
g[0]=v[0]
g[1]=v[1]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:40) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:39:50) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:00) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:16) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
	print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:40:53) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:41:39) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:11) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:49) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:47) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (v>1):
	if (v[i]<5):
		r=r+1
		print(r)
g=zeros(r,dtypes=int)
for i in g:
	a=0
	if(v[i]<5):
		a=a+1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:21) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

for i in v:
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:48) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if (v[]<5):
		r=r+1
		print(r)
-- ERROR:
File "XXXX", line 7
    if (v[]<5):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:29) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if (v[v]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:55) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:44) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1)
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
File "XXXX", line 6
    while (size(v)>1)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:47) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:07) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size[v]>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:40) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
j=1
while (size(v)>j):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:58) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>j):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:14) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:16) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:25) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:32) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:49:54) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0

while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:26) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:52:24) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:52:51) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
	print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:01) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:20) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:23) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (i<size(v)):
	if (v[i]<5):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:39) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:01) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:45) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
print(r)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:56:55) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
print(r)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:57:23) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
	i=i+1
print(r)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:58:06) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
while (size(v)>1):
	if (v[i]<5):
		r=r+1
		print(r)
-- EXECUTION TIME:
525.374
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:01) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(i,dtype=int)
g[i]=v[i]
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:06) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(i,dtype=int)
g[i]=v[i]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:22) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(i,dtype=float)
g[i]=v[i]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:53) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(i,dtype)
g[i]=v[i]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:10) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:16) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:47) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:01:27) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:24) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
		print(g)
-- ERROR:
File "XXXX", line 12
    print(g)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:30) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:04:48) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<range(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:10) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i==size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:26) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:05:45) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
print(g)
-- EXECUTION TIME:
0.864495
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
1
2
3
4
5
6
7
8
9
10
11
[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
1
2
3
4
5
6
7
8
9
[0. 0. 0. 0. 0. 0. 0. 0. 0.]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
1
2
3
4
[0. 0. 0. 0.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:46) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=float)
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:06) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:25) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:50) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	print(i)
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:30) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		print(r)
		i=i+1
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:08:36) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		print(r)
		i=i+1
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:19) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:10:55) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
g=zeros(r,dtype=int)
g[i]=v[r]
print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:16) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros(r,dtypes=int)
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:41) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros(r)
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:25) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros[r]
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:34) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros[r]
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:04) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros(r,dtype=float)
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
		print(g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:34) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros(r,dtype=float)
	print(g)
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:02) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros(r,dtype=float)
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:16:27) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	g=zeros(r,dtype=float)
	if(i<size(v)):
		r=r+1
		print(r)
		i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:17:42) 
-- CODE:
from numpy import*

v=array(eval(input()))
r=0
i=0
for i in v:
	if(i<size(v)):
		r=r+1
		i=i+1
		print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
